Actualizadas las traducciones.

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -371,7 +371,7 @@
     "db-user": "Usuario da base de datos",
     "debit": "Debe",
     "debug-mode": "Modo depuración",
-    "december": "Diciembre",
+    "december": "Decembro",
     "decimal-separator": "Separador de decimais",
     "decimals": "Decimais",
     "default": "Por defecto",
@@ -515,17 +515,17 @@
     "es-tax-exception-e4": "España: excepción polo artigo 23 e 24 da Ley do IVE",
     "es-tax-exception-e5": "España: excepción polo artigo 25 da Ley do IVE",
     "es-tax-exception-e6": "España: excepción por outra causa",
-    "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
-    "es-tax-regime-cash-criteria": "Criterio de caja",
+    "es-tax-regime-agrarian": "Rexime especial da agricultura, gandería e pesca",
+    "es-tax-regime-cash-criteria": "Criterio de caixa",
     "es-tax-regime-especial-agp": "Réxime especial da agricultura, gandería e pesca",
     "es-tax-regime-exempt": "Exento",
     "es-tax-regime-general": "Réxime xeral",
-    "es-tax-regime-gold": "Régimen especial del oro de inversión",
-    "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
+    "es-tax-regime-gold": "Rexime especial do ouro de inversión",
+    "es-tax-regime-group-entities": "Rexime especial do grupo de entidades",
     "es-tax-regime-simplified": "Réxime simplificado",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
-    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
-    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
+    "es-tax-regime-telecom": "Rexímenes especiais aplicables aos servicios de telecomunicacións, de radiodifusión ou de televisión e aos prestados por vía electrónica",
+    "es-tax-regime-travel": "Rexime especial das axencias de viaxes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "estimation": "Orzamento",
     "estimation-email-subject": "O seu orzamento %code%",
@@ -1151,7 +1151,7 @@
     "refresh": "Actualizar",
     "refresh-page": "Actualiza a páxina",
     "refund-amount": "Cantidade devolta",
-    "refund-payment-concept": "Devolución del recibo %document%",
+    "refund-payment-concept": "Devolución do recibo %document%",
     "refunds": "Devolucións",
     "register": "Rexistrar",
     "register-installation": "Rexistrar instalación",
