Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -665,6 +665,7 @@
     "heading-account-group-id": "ID grup epígrafs",
     "heading-account-id-root": "ID pare",
     "health": "Salut",
+    "height": "Alt",
     "help": "Ajuda",
     "help-button-p": "Consulta l'ajuda a cada pantalla",
     "help-server-accepts-filesize": "Aquest servidor admet una mida màxima de fitxer de %size% MB.",
@@ -896,6 +897,18 @@
     "model-not-found": "Model no trobat",
     "monday": "Dilluns",
     "month": "Mes",
+    "month-1": "Enero",
+    "month-10": "Octubre",
+    "month-11": "Noeviembre",
+    "month-12": "Diciembre",
+    "month-2": "Febrero",
+    "month-3": "Marzo",
+    "month-4": "Abril",
+    "month-5": "Mayo",
+    "month-6": "Junio",
+    "month-7": "Julio",
+    "month-8": "Agosto",
+    "month-9": "Septiembre",
     "month-name": "Nom del Mes",
     "month-wildcard-info": "Mes actual (de la data actual)",
     "monthly": "Mensual",
