--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -665,6 +665,7 @@
     "heading-account-group-id": "Heading-ID-Gruppe",
     "heading-account-id-root": "Überweisungskonto root",
     "health": "Gesundheit",
+    "height": "Hoch",
     "help": "Hilfe",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "Dieser Server unterstützt eine maximale Größe von %1$s MB. Wenn das Plugin übernimmt, wird fehlschlagen, es zu laden, auch kann man nichts verlassen.",
@@ -896,6 +897,18 @@
     "model-not-found": "Modell nicht gefunden: %model%",
     "monday": "Montag",
     "month": "Mes",
+    "month-1": "Enero",
+    "month-10": "Octubre",
+    "month-11": "Noeviembre",
+    "month-12": "Diciembre",
+    "month-2": "Febrero",
+    "month-3": "Marzo",
+    "month-4": "Abril",
+    "month-5": "Mayo",
+    "month-6": "Junio",
+    "month-7": "Julio",
+    "month-8": "Agosto",
+    "month-9": "Septiembre",
     "month-name": "Month Name",
     "month-wildcard-info": "Current month (of the current date)",
     "monthly": "monatlich",
