--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -665,6 +665,7 @@
     "heading-account-group-id": "Epigrafe taldearen ID",
     "heading-account-id-root": "Kontu nagusiaren erroa",
     "health": "Osasuna",
+    "height": "Altuera",
     "help": "Laguntza",
     "help-button-p": "Laguntza pantaila bakoitzean kontsultatu",
     "help-server-accepts-filesize": "Zerbitzari honek %size% MB. tamaina onartzen du gehienez.",
@@ -896,6 +897,18 @@
     "model-not-found": "Modeloa ez da aurkitu: %model%",
     "monday": "Astelehena",
     "month": "Hilabetea",
+    "month-1": "Enero",
+    "month-10": "Octubre",
+    "month-11": "Noeviembre",
+    "month-12": "Diciembre",
+    "month-2": "Febrero",
+    "month-3": "Marzo",
+    "month-4": "Abril",
+    "month-5": "Mayo",
+    "month-6": "Junio",
+    "month-7": "Julio",
+    "month-8": "Agosto",
+    "month-9": "Septiembre",
     "month-name": "Hilabetearen izena",
     "month-wildcard-info": "Oraingo hilabetea (gaurko datakoa)",
     "monthly": "Hilero",
