--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -665,6 +665,7 @@
     "heading-account-group-id": "En tête du groupe d'identification de compte",
     "heading-account-id-root": "En-tête de compte",
     "health": "Santé",
+    "height": "Alto",
     "help": "Aide",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "Ce serveur prend en charge une taille maximale de %size% MB.",
@@ -896,6 +897,18 @@
     "model-not-found": "Modèle non trouvé : %model%",
     "monday": "Lundi",
     "month": "Mes",
+    "month-1": "Enero",
+    "month-10": "Octubre",
+    "month-11": "Noeviembre",
+    "month-12": "Diciembre",
+    "month-2": "Febrero",
+    "month-3": "Marzo",
+    "month-4": "Abril",
+    "month-5": "Mayo",
+    "month-6": "Junio",
+    "month-7": "Julio",
+    "month-8": "Agosto",
+    "month-9": "Septiembre",
     "month-name": "Nom du mois",
     "month-wildcard-info": "Mois en cours (de la date actuelle)",
     "monthly": "Mensuel",
