--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -665,6 +665,7 @@
     "heading-account-group-id": "Grupo de ID de conta de título",
     "heading-account-id-root": "ID pai",
     "health": "Saúde",
+    "height": "Alto",
     "help": "Axuda",
     "help-button-p": "Consulta a axuda en cada pantalla",
     "help-server-accepts-filesize": "Este servidor admite un tamaño máximo de %size% MB.",
@@ -896,6 +897,18 @@
     "model-not-found": "Modelo non atopado",
     "monday": "Luns",
     "month": "Mes",
+    "month-1": "Enero",
+    "month-10": "Octubre",
+    "month-11": "Noeviembre",
+    "month-12": "Diciembre",
+    "month-2": "Febrero",
+    "month-3": "Marzo",
+    "month-4": "Abril",
+    "month-5": "Mayo",
+    "month-6": "Junio",
+    "month-7": "Julio",
+    "month-8": "Agosto",
+    "month-9": "Septiembre",
     "month-name": "Nome do mes",
     "month-wildcard-info": "Mes actual (da data actual)",
     "monthly": "Mensualmente",
