--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -665,6 +665,7 @@
     "heading-account-group-id": "Gruppo ID dell'account di intestazioni",
     "heading-account-id-root": "Radice dell'account di intestazione",
     "health": "health",
+    "height": "Alto",
     "help": "aiutare",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "Questo server supporta una dimensione massima di %1$s MB. Se il plugin prende il sopravvento, si sarà in grado di caricare, anche non si può lasciare nulla.",
@@ -896,6 +897,18 @@
     "model-not-found": "model-not-found",
     "monday": "monday",
     "month": "Mes",
+    "month-1": "Enero",
+    "month-10": "Octubre",
+    "month-11": "Noeviembre",
+    "month-12": "Diciembre",
+    "month-2": "Febrero",
+    "month-3": "Marzo",
+    "month-4": "Abril",
+    "month-5": "Mayo",
+    "month-6": "Junio",
+    "month-7": "Julio",
+    "month-8": "Agosto",
+    "month-9": "Septiembre",
     "month-name": "Month Name",
     "month-wildcard-info": "Current month (of the current date)",
     "monthly": "Monthly",
