--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -665,6 +665,7 @@
     "heading-account-group-id": "ID del grup",
     "heading-account-id-root": "ID del pare",
     "health": "Salut",
+    "height": "Alto",
     "help": "Ajuda",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "Este servidor permet fitxers d'una mida màxima de %size% MB.",
@@ -896,6 +897,18 @@
     "model-not-found": "El model %model% no s'ha trobat",
     "monday": "monday",
     "month": "Mes",
+    "month-1": "Enero",
+    "month-10": "Octubre",
+    "month-11": "Noeviembre",
+    "month-12": "Diciembre",
+    "month-2": "Febrero",
+    "month-3": "Marzo",
+    "month-4": "Abril",
+    "month-5": "Mayo",
+    "month-6": "Junio",
+    "month-7": "Julio",
+    "month-8": "Agosto",
+    "month-9": "Septiembre",
     "month-name": "Nom del més",
     "month-wildcard-info": "Més actual (de la data actual)",
     "monthly": "Mensualment",
