--- a/Core/Translation/es_CL.json
+++ b/Core/Translation/es_CL.json
@@ -665,6 +665,7 @@
     "heading-account-group-id": "ID grupo epígrafes",
     "heading-account-id-root": "ID principal",
     "health": "Salud",
+    "height": "Alto",
     "help": "Ayuda",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "Este servidor admite un tamaño máximo de %size% MB.",
@@ -896,6 +897,18 @@
     "model-not-found": "Modelo no encontrado: %model%",
     "monday": "Lunes",
     "month": "Mes",
+    "month-1": "Enero",
+    "month-10": "Octubre",
+    "month-11": "Noviembre",
+    "month-12": "Diciembre",
+    "month-2": "Febrero",
+    "month-3": "Marzo",
+    "month-4": "Abril",
+    "month-5": "Mayo",
+    "month-6": "Junio",
+    "month-7": "Julio",
+    "month-8": "Agosto",
+    "month-9": "Septiembre",
     "month-name": "Nombre del Mes",
     "month-wildcard-info": "Mes actual (de la fecha actual)",
     "monthly": "Mensual",
