--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -665,6 +665,7 @@
     "heading-account-group-id": "Cabeçalho do grupo de identificação da conta",
     "heading-account-id-root": "Cabeçalho da raiz da conta",
     "health": "health",
+    "height": "Alto",
     "help": "Socorro",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "This server support files up to %size% MB.",
@@ -896,6 +897,18 @@
     "model-not-found": "model-not-found",
     "monday": "segunda-feira",
     "month": "Mes",
+    "month-1": "Enero",
+    "month-10": "Octubre",
+    "month-11": "Noeviembre",
+    "month-12": "Diciembre",
+    "month-2": "Febrero",
+    "month-3": "Marzo",
+    "month-4": "Abril",
+    "month-5": "Mayo",
+    "month-6": "Junio",
+    "month-7": "Julio",
+    "month-8": "Agosto",
+    "month-9": "Septiembre",
     "month-name": "Nome do mês",
     "month-wildcard-info": "Mês atual (na data de hoje)",
     "monthly": "Mensalmente",
