--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -897,18 +897,18 @@
     "model-not-found": "Model no trobat",
     "monday": "Dilluns",
     "month": "Mes",
-    "month-1": "Enero",
+    "month-1": "Gener",
     "month-10": "Octubre",
-    "month-11": "Noeviembre",
-    "month-12": "Diciembre",
-    "month-2": "Febrero",
-    "month-3": "Marzo",
+    "month-11": "Novembre",
+    "month-12": "Desembre",
+    "month-2": "Febrer",
+    "month-3": "Març",
     "month-4": "Abril",
-    "month-5": "Mayo",
-    "month-6": "Junio",
-    "month-7": "Julio",
-    "month-8": "Agosto",
-    "month-9": "Septiembre",
+    "month-5": "Maig",
+    "month-6": "Juny",
+    "month-7": "Juliol",
+    "month-8": "Agost",
+    "month-9": "Setembre",
     "month-name": "Nom del Mes",
     "month-wildcard-info": "Mes actual (de la data actual)",
     "monthly": "Mensual",
