--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -18,7 +18,7 @@
     "account-data-missing": "Falten dades en el compte",
     "account-dot-code": "Punt per a autocompletar zeros. Exemple: 11.1 = 1100000001",
     "account-length": "Longitud de compte",
-    "account-length-error": "Longitud de subcompte errònia. El subcompte %code% ha de tenir la longitud definida en l'exercici.",
+    "account-length-error": "Longitud de subcompte erroni. El subcompte %code% ha de tenir la longitud definida en l'exercici.",
     "account-missing-in-balance": "El compte %codcuenta% té saldo però no està inclòs als balanços. Considereu incloure-la si el balanç surt desquadrat.",
     "account-parent-error": "El compte pare és incorrecte o no pertany a l'exercici",
     "accounting": "Comptabilitat",
