Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -418,6 +418,7 @@
     "description-4ba": "Beschreibung 4ba",
     "description2": "Beschreibung 2",
     "description3": "Beschreibung 3",
+    "design": "Diseño",
     "destination-warehouse": "Ziellager",
     "detail": "Detail",
     "difference": "Unterschied",
