--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -418,6 +418,7 @@
     "description-4ba": "Description 4ba",
     "description2": "Description 2",
     "description3": "Description 3",
+    "design": "Design",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detail",
     "difference": "Difference",
