--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -418,6 +418,7 @@
     "description-4ba": "4ba. Deskribapena",
     "description2": "2. deskribapena",
     "description3": "3. deskribapena",
+    "design": "Diseinua",
     "destination-warehouse": "Biltegi jasotzailea",
     "detail": "Xehetasuna",
     "difference": "Diferentzia",
