--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -418,6 +418,7 @@
     "description-4ba": "Descrición 4ba",
     "description2": "Descrición 2",
     "description3": "Descrición 3",
+    "design": "Deseño",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "difference": "Diferencia",
