--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -418,6 +418,7 @@
     "description-4ba": "Descrizione 4ba",
     "description2": "description2",
     "description3": "description3",
+    "design": "Diseño",
     "destination-warehouse": "Magazzino di Destinazione",
     "detail": "dettaglio",
     "difference": "difference",
