--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -418,6 +418,7 @@
     "description-4ba": "Descrição 4ba",
     "description2": "Descrição 2",
     "description3": "Descrição 3",
+    "design": "Diseño",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detalhe",
     "difference": "difference",
