--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -418,6 +418,7 @@
     "description-4ba": "Descripció 4ba",
     "description2": "Descripció 2",
     "description3": "Descripció 3",
+    "design": "Diseño",
     "destination-warehouse": "Almagasén de destí",
     "detail": "Detall",
     "difference": "Diferència",
