--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -418,6 +418,7 @@
     "description-4ba": "Descripción 4ba",
     "description2": "Descripción 2",
     "description3": "Descripción 3",
+    "design": "Diseño",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "difference": "Diferencia",
