--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -418,6 +418,7 @@
     "description-4ba": "Descrição 4ba",
     "description2": "description2",
     "description3": "description3",
+    "design": "Diseño",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detalhe",
     "difference": "difference",
