Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -663,6 +663,7 @@
     "groups": "Grups",
     "has-parent": "Té pare",
     "hash": "Hash",
+    "header": "Cabecera",
     "heading-account-group-id": "ID grup epígrafs",
     "heading-account-id-root": "ID pare",
     "health": "Salut",
