--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -663,6 +663,7 @@
     "groups": "Gruppen",
     "has-parent": "has-parent",
     "hash": "Hash",
+    "header": "Cabecera",
     "heading-account-group-id": "Heading-ID-Gruppe",
     "heading-account-id-root": "Überweisungskonto root",
     "health": "Gesundheit",
