--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -663,6 +663,7 @@
     "groups": "Groups",
     "has-parent": "Has parent",
     "hash": "Hash",
+    "header": "Header",
     "heading-account-group-id": "Heading account ID group",
     "heading-account-id-root": "Heading account root",
     "health": "Health",
