--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -663,6 +663,7 @@
     "groups": "Groupes",
     "has-parent": "Possède un parent",
     "hash": "Hash",
+    "header": "Cabecera",
     "heading-account-group-id": "En tête du groupe d'identification de compte",
     "heading-account-id-root": "En-tête de compte",
     "health": "Santé",
