--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -663,6 +663,7 @@
     "groups": "Grupos",
     "has-parent": "Ten pai",
     "hash": "Hash",
+    "header": "Cabecera",
     "heading-account-group-id": "Grupo de ID de conta de título",
     "heading-account-id-root": "ID pai",
     "health": "Saúde",
