--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -663,6 +663,7 @@
     "groups": "Grupos",
     "has-parent": "Tem pai",
     "hash": "Hash",
+    "header": "Cabecera",
     "heading-account-group-id": "Cabeçalho do grupo de identificação da conta",
     "heading-account-id-root": "Cabeçalho da raiz da conta",
     "health": "health",
