--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -663,6 +663,7 @@
     "groups": "Grups",
     "has-parent": "has-parent",
     "hash": "Hash",
+    "header": "Cabecera",
     "heading-account-group-id": "ID del grup",
     "heading-account-id-root": "ID del pare",
     "health": "Salut",
