--- a/Core/Translation/es_PA.json
+++ b/Core/Translation/es_PA.json
@@ -663,6 +663,7 @@
     "groups": "Grupos",
     "has-parent": "Tiene padre",
     "hash": "Hash",
+    "header": "Cabecera",
     "heading-account-group-id": "ID grupo epígrafes",
     "heading-account-id-root": "ID padre",
     "health": "Salud",
