--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -663,6 +663,7 @@
     "groups": "Grupos",
     "has-parent": "Tiene padre",
     "hash": "Compatibilizar.",
+    "header": "Cabecera",
     "heading-account-group-id": "ID grupo epígrafes.",
     "heading-account-id-root": "ID Madre.",
     "health": "Salud",
