Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -615,6 +615,7 @@
     "general-concepts": "Conceptes generals",
     "general-data": "Dades generals",
     "generate": "Generar",
+    "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "fer assentament comptable",
     "generate-doc-type": "Generar tipus de document",
     "generate-invoice": "Fer factura",
@@ -661,6 +662,7 @@
     "group-or-split-p": "Aquest assistent permet generar un nou document a partir de les línies d'altres. Seleccioneu les quantitats que voleu utilitzar, la data del nou document i premi el botó generar.",
     "grouping-type": "Agrupació",
     "groups": "Grups",
+    "has-attachments": "Tiene adjuntos",
     "has-parent": "Té pare",
     "hash": "Hash",
     "header": "Cabecera",
@@ -950,6 +952,7 @@
     "no-invoice": "Sense factura",
     "no-outstanding-amount": "No hi ha import pendent",
     "no-print-permission": "No teniu permís per imprimir o exportar",
+    "no-reference": "Sin referencia",
     "no-selected-item": "Cap element seleccionat",
     "no-stock": "No controlar stock",
     "non-editable-accounting-entry": "Assentament no editable",
