--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -615,6 +615,7 @@
     "general-concepts": "Allgemeine Konzepte",
     "general-data": "allgemeine Informationen",
     "generate": "Erstellen",
+    "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "Buchung erstellen",
     "generate-doc-type": "Dokumententyp erstellen",
     "generate-invoice": "Rechnung erstellen",
@@ -661,6 +662,7 @@
     "group-or-split-p": "Mit diesem Assistenten können Sie ausgehend von den Zeilen anderer ein neues Dokument generieren. Wählen Sie die Mengen aus, die Sie verwenden möchten, das Datum des neuen Dokuments und klicken Sie auf die Knopf Generieren.",
     "grouping-type": "Agrupación",
     "groups": "Gruppen",
+    "has-attachments": "Tiene adjuntos",
     "has-parent": "has-parent",
     "hash": "Hash",
     "header": "Cabecera",
@@ -950,6 +952,7 @@
     "no-invoice": "no-invoice",
     "no-outstanding-amount": "no-outstanding-amount",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
+    "no-reference": "Sin referencia",
     "no-selected-item": "no-selected-item",
     "no-stock": "Kein Bestand",
     "non-editable-accounting-entry": "non-editable-accounting-entry",
