--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -615,6 +615,7 @@
     "general-concepts": "General concepts",
     "general-data": "General data",
     "generate": "Generate",
+    "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "Generate accounting entry",
     "generate-doc-type": "Generate document type",
     "generate-invoice": "Generate invoice",
@@ -661,6 +662,7 @@
     "group-or-split-p": "This wizard allows you to generate a new document from the lines of others. Select the quantities you want to use, the date of the new document and press the generate button.",
     "grouping-type": "Group",
     "groups": "Groups",
+    "has-attachments": "Tiene adjuntos",
     "has-parent": "Has parent",
     "hash": "Hash",
     "header": "Header",
@@ -950,6 +952,7 @@
     "no-invoice": "No invoice",
     "no-outstanding-amount": "There is no outstanding amount",
     "no-print-permission": "You do not have permission to print or export",
+    "no-reference": "Sin referencia",
     "no-selected-item": "No selected item",
     "no-stock": "Do not control stock",
     "non-editable-accounting-entry": "Non-editable accounting entry",
