--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -615,6 +615,7 @@
     "general-concepts": "Kontzeptu orokorrak",
     "general-data": "Datu orokorrak",
     "generate": "Sortu",
+    "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "Kontabilitate idazpena sortu",
     "generate-doc-type": "Sortzen duen documentu mota",
     "generate-invoice": "Faktura sortu",
@@ -661,6 +662,7 @@
     "group-or-split-p": "Laguntzaile honek beste dokumentu batzuetatik dokumentu berria sortzeko aukera ematen du. Hautatu erabili nahi dituzun kantitateak, dokumentu berriaren data eta sakatu sortu botoia.",
     "grouping-type": "Taldea",
     "groups": "Taldeak",
+    "has-attachments": "Tiene adjuntos",
     "has-parent": "Arbasoa dauka",
     "hash": "Hash",
     "header": "Cabecera",
@@ -950,6 +952,7 @@
     "no-invoice": "Fakturarik gabe",
     "no-outstanding-amount": "Ez dago zenbatekorik zain",
     "no-print-permission": "Ez duzu inprimatzeko edo esportatzeko baimenik",
+    "no-reference": "Sin referencia",
     "no-selected-item": "Ez da elementurik aukeratu",
     "no-stock": "Stocka ez kontrolatu",
     "non-editable-accounting-entry": "Idazpena ezin da editatu",
