--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -615,6 +615,7 @@
     "general-concepts": "Concepts généraux",
     "general-data": "Données générales",
     "generate": "Générer",
+    "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "Générer une entrée comptable",
     "generate-doc-type": "Générer un type de document",
     "generate-invoice": "Générer une facture",
@@ -661,6 +662,7 @@
     "group-or-split-p": "Cet assistant vous permet de générer un nouveau document à partir des lignes provenant d'autres documents. Sélectionnez les quantités que vous désirez utiliser, la date du nouveau document et cliquez sur le bouton Générer.",
     "grouping-type": "Groupe",
     "groups": "Groupes",
+    "has-attachments": "Tiene adjuntos",
     "has-parent": "Possède un parent",
     "hash": "Hash",
     "header": "Cabecera",
@@ -950,6 +952,7 @@
     "no-invoice": "Pas de facture",
     "no-outstanding-amount": "Il n'y a pas de montant impayé",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
+    "no-reference": "Sin referencia",
     "no-selected-item": "Aucun élément sélectionné",
     "no-stock": "Ne pas contrôler le stock",
     "non-editable-accounting-entry": "Entrée comptable non modifiable",
