--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -615,6 +615,7 @@
     "general-concepts": "Conceptos xerais",
     "general-data": "Datos xerais",
     "generate": "Xerar",
+    "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "Xerar asento contable",
     "generate-doc-type": "Xerar tipo de documento",
     "generate-invoice": "Acción para crear facturas",
@@ -661,6 +662,7 @@
     "group-or-split-p": "Este asistente permite xerar un novo documento a partir das liñas doutros. Seleccione as cantidades que desexa usar, a data do novo documento e pulse o botón xerar.",
     "grouping-type": "Agrupación",
     "groups": "Grupos",
+    "has-attachments": "Tiene adjuntos",
     "has-parent": "Ten pai",
     "hash": "Hash",
     "header": "Cabecera",
@@ -950,6 +952,7 @@
     "no-invoice": "Sen factura",
     "no-outstanding-amount": "Non hai importe pendente",
     "no-print-permission": "Non ten permiso para imprimir ou exportar",
+    "no-reference": "Sin referencia",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "Non controlar stock",
     "non-editable-accounting-entry": "Asento non editable",
