--- a/Core/Translation/es_MX.json
+++ b/Core/Translation/es_MX.json
@@ -615,6 +615,7 @@
     "general-concepts": "Conceptos generales",
     "general-data": "Datos generales",
     "generate": "Generar",
+    "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "Generar asiento contable",
     "generate-doc-type": "Generar tipo de documento",
     "generate-invoice": "Crear factura",
@@ -661,6 +662,7 @@
     "group-or-split-p": "Este asistente permite generar un nuevo documento a partir de las líneas de otros. Seleccione las cantidades que desea usar, la fecha del nuevo documento y pulse el botón generar.",
     "grouping-type": "Agrupación",
     "groups": "Grupos",
+    "has-attachments": "Tiene adjuntos",
     "has-parent": "Tiene padre",
     "hash": "Hash",
     "header": "Cabecera",
@@ -950,6 +952,7 @@
     "no-invoice": "Sin factura",
     "no-outstanding-amount": "No hay importe pendiente",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
+    "no-reference": "Sin referencia",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
     "non-editable-accounting-entry": "Asiento no editable",
