--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -615,6 +615,7 @@
     "general-concepts": "Conceitos Gerais",
     "general-data": "Dados gerais",
     "generate": "Gerar",
+    "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "generate-accounting-entry",
     "generate-doc-type": "Generate document type",
     "generate-invoice": "generate-invoice",
@@ -661,6 +662,7 @@
     "group-or-split-p": "group-or-split-p",
     "grouping-type": "Agrupación",
     "groups": "Grupos",
+    "has-attachments": "Tiene adjuntos",
     "has-parent": "Tem pai",
     "hash": "Hash",
     "header": "Cabecera",
@@ -950,6 +952,7 @@
     "no-invoice": "no-invoice",
     "no-outstanding-amount": "no-outstanding-amount",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
+    "no-reference": "Sin referencia",
     "no-selected-item": "no-selected-item",
     "no-stock": "Sem estoque",
     "non-editable-accounting-entry": "non-editable-accounting-entry",
