--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -615,6 +615,7 @@
     "general-concepts": "Conceptes generals",
     "general-data": "Senyes generals",
     "generate": "Generar",
+    "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "Generar assentament contable",
     "generate-doc-type": "Generar tipo de document",
     "generate-invoice": "Crear factura",
@@ -661,6 +662,7 @@
     "group-or-split-p": "Aquest assistent permet generar un nou document a partir de les línies d'uns altres. Seleccione les quantitats que desitja usar, la data del nou document i prema el botó generar.",
     "grouping-type": "Agrupación",
     "groups": "Grups",
+    "has-attachments": "Tiene adjuntos",
     "has-parent": "has-parent",
     "hash": "Hash",
     "header": "Cabecera",
@@ -950,6 +952,7 @@
     "no-invoice": "Sense factura",
     "no-outstanding-amount": "No hi ha cap cantitat pendent",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
+    "no-reference": "Sin referencia",
     "no-selected-item": "No hi ha cap element seleccionat",
     "no-stock": "No hi ha estoc",
     "non-editable-accounting-entry": "Assentament no editable",
