Pequeñas correcciones al último PR y actualización de las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1162,6 +1162,7 @@
     "recreate-system-integrity": "Tornar a crear la integritat del sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Les factures són documents mercantils i tenen una sèrie de restriccions legals. No es poden eliminar ni modificar. Només es permeten devolucions totals o parcials. Utilitza aquest formulari per fer una devolució sobre aquesta factura.",
+    "rectifying": "Rectificativa",
     "rectifying-serie": "Sèrie rectificativa",
     "redirect": "Redirecció",
     "reference": "Referència",
@@ -1276,6 +1277,7 @@
     "show-quantity": "Mostra quantitat en la impressió",
     "signature": "Signatura",
     "simple": "Simple",
+    "simplified": "Simplificada",
     "size": "Mida",
     "sketch": "Esbós",
     "sketch-invoice-warning": "Aquesta factura encara és un esbós. Feu-la oficial canviat el seu estat a emesa.",
