--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1162,6 +1162,7 @@
     "recreate-system-integrity": "Recreate system integrity",
     "rectified-invoice": "Rectified invoice",
     "rectified-invoice-p": "Invoices are commercial documents and have a number of legal restrictions. They cannot be deleted or modified, only total or partial returns are allowed. Use this form to make a return of this invoice.",
+    "rectifying": "Rectificativa",
     "rectifying-serie": "Rectifying serie",
     "redirect": "Redirect",
     "reference": "Reference",
@@ -1276,6 +1277,7 @@
     "show-quantity": "Show quantity on print",
     "signature": "Signature",
     "simple": "Simple",
+    "simplified": "Simplificada",
     "size": "Size",
     "sketch": "Boceto",
     "sketch-invoice-warning": "This invoice is still a draft. Make it official by changing its status to issued.",
