--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1162,6 +1162,7 @@
     "recreate-system-integrity": "Recréer l'intégrité du système",
     "rectified-invoice": "Facture rectifiée",
     "rectified-invoice-p": "Les factures sont des documents commerciaux, et sont soumises à un certain nombre de restrictions légales. Elle ne peuvent être effacées ou modifiées, seul des retour totaux ou partiels sont autorisés. Utilisez ce formulaire pour effectuer un retour de cette facture.",
+    "rectifying": "Rectificativa",
     "rectifying-serie": "Série des rectificatifs",
     "redirect": "Redirección",
     "reference": "Référence",
@@ -1276,6 +1277,7 @@
     "show-quantity": "Afficher la quantité sur l'impression",
     "signature": "Signature",
     "simple": "Simple",
+    "simplified": "Simplificada",
     "size": "taille",
     "sketch": "Esquisse",
     "sketch-invoice-warning": "Cette facture est une ébauche. Officialisez-la en modifiant son état pour 'Émis'.",
