--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1162,6 +1162,7 @@
     "recreate-system-integrity": "Volver crear a integridade do sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "As facturas son documentos mercantís e teñen unha serie de restricións legais. Non se poden eliminar nin modificar. Soamente permítense devolucións totais ou parciais. Utiliza este formulario para facer unha devolución sobre esta factura.",
+    "rectifying": "Rectificativa",
     "rectifying-serie": "Serie para facturas rectificativas",
     "redirect": "Redirección",
     "reference": "Referencia",
@@ -1276,6 +1277,7 @@
     "show-quantity": "Mostrar cantidade na impresión",
     "signature": "Sinatura",
     "simple": "Simple",
+    "simplified": "Simplificada",
     "size": "tamaño",
     "sketch": "Bosquexo",
     "sketch-invoice-warning": "Esta factura aínda é un bosquexo. Fágaa oficial cambiado o seu estado á emitida.",
