--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1162,6 +1162,7 @@
     "recreate-system-integrity": "Recreate system integrity",
     "rectified-invoice": "rectified-invoice",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
+    "rectifying": "Rectificativa",
     "rectifying-serie": "rectifying-serie",
     "redirect": "Redirección",
     "reference": "Riferimento",
@@ -1276,6 +1277,7 @@
     "show-quantity": "Show quantity on print",
     "signature": "Signature",
     "simple": "Semplice",
+    "simplified": "Simplificada",
     "size": "size",
     "sketch": "Boceto",
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
