--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1162,6 +1162,7 @@
     "recreate-system-integrity": "Tornar a crear l'integritat del sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
+    "rectifying": "Rectificativa",
     "rectifying-serie": "Sèrie rectificativa",
     "redirect": "Redirección",
     "reference": "Referència",
@@ -1276,6 +1277,7 @@
     "show-quantity": "Mostrar la cantitat en l'impressió",
     "signature": "Signature",
     "simple": "Simple",
+    "simplified": "Simplificada",
     "size": "Tamany",
     "sketch": "Boceto",
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
