--- a/Core/Translation/es_AR.json
+++ b/Core/Translation/es_AR.json
@@ -1162,6 +1162,7 @@
     "recreate-system-integrity": "Volver a crear la integridad del sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tienen una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utilice este formulario para hacer una devolución sobre esta factura.",
+    "rectifying": "Rectificativa",
     "rectifying-serie": "Serie rectificativa",
     "redirect": "Redirección",
     "reference": "Referencia",
@@ -1276,6 +1277,7 @@
     "show-quantity": "Mostrar cantidad en la impresión",
     "signature": "Firma",
     "simple": "Simple",
+    "simplified": "Simplificada",
     "size": "Tamaño",
     "sketch": "Boceto",
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
