--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1162,6 +1162,7 @@
     "recreate-system-integrity": "Sistemaren integritatea berriz sortu",
     "rectified-invoice": "Zuzenketa faktura",
     "rectified-invoice-p": "Fakturak dokumentu komertzialak dira eta legezko hainbat muga dituzte. Ezin dira ezabatu edo aldatu. Itzultze osoak edo partzialak onartzen dira soilik. Erabili formulario hau faktura honen itzulketa egiteko.",
+    "rectifying": "Rectificativa",
     "rectifying-serie": "Serie zuzentzailea",
     "redirect": "Berbideratzea",
     "reference": "Erreferentzia",
@@ -1276,6 +1277,7 @@
     "show-quantity": "Kopurua inprimatzean bistaratu",
     "signature": "Sinadura",
     "simple": "Sinplea",
+    "simplified": "Simplificada",
     "size": "Tamaina",
     "sketch": "Zirriborroa",
     "sketch-invoice-warning": "Faktura hau zirriborro bat dat. Ofiziala egin ezazu bere egoera igortuta-ra aldatuz.",
