--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -812,6 +812,8 @@
     "ledger": "täglich",
     "left": "Links",
     "level": "Level",
+    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-cost-sales": "Nivel para ver costes",
     "level1": "Level 1",
     "level2": "Level 2",
     "level3": "Level 3",
@@ -974,6 +976,7 @@
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Nummer",
+    "number-attachments": "Nº de adjuntos",
     "number-length": "number-length",
     "number-recipients": "Nº perceptores",
     "number2": "Nummer 2",
@@ -1121,6 +1124,7 @@
     "profile": "Perfil",
     "profit-and-loss": "Gewinn und Verlust",
     "profit-and-loss-balance": "Profit and loss accounts",
+    "profits": "Beneficios",
     "project": "Proyekt",
     "projects": "Proyekte",
     "provider-reference": "Anbieterreferenz",
