--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -812,6 +812,8 @@
     "ledger": "Egunero",
     "left": "Ezkerra",
     "level": "Maila",
+    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-cost-sales": "Nivel para ver costes",
     "level1": "1. maila",
     "level2": "2. maila",
     "level3": "3. maila",
@@ -974,6 +976,7 @@
     "notifications": "Jakinarazpenak",
     "november": "Noviembre",
     "number": "Zenbakia",
+    "number-attachments": "Nº de adjuntos",
     "number-length": "Zenbakiaren luzera",
     "number-recipients": "Jasotzaile Zkia.",
     "number2": "2. zenbakia",
@@ -1121,6 +1124,7 @@
     "profile": "Perfila",
     "profit-and-loss": "Galera eta irabaziak",
     "profit-and-loss-balance": "Galdu-irabazien kontua",
+    "profits": "Beneficios",
     "project": "Proiektua",
     "projects": "Proiektuak",
     "provider-reference": "Hornitzailearen erreferentzia",
