--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -812,6 +812,8 @@
     "ledger": "Quotidien",
     "left": "Gauche",
     "level": "Niveau",
+    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-cost-sales": "Nivel para ver costes",
     "level1": "Niveau 1",
     "level2": "Niveau 2",
     "level3": "Niveau 3",
@@ -974,6 +976,7 @@
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Nombre",
+    "number-attachments": "Nº de adjuntos",
     "number-length": "Longueur du nombre",
     "number-recipients": "Nº destinataires",
     "number2": "numéro 2",
@@ -1121,6 +1124,7 @@
     "profile": "Perfil",
     "profit-and-loss": "Pertes et profits",
     "profit-and-loss-balance": "Comptes de profits et pertes",
+    "profits": "Beneficios",
     "project": "Projet",
     "projects": "Projets",
     "provider-reference": "Référence du fournisseur",
