--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -812,6 +812,8 @@
     "ledger": "Ledger",
     "left": "Sinistra",
     "level": "Livello",
+    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-cost-sales": "Nivel para ver costes",
     "level1": "Livello 1",
     "level2": "Level 2",
     "level3": "Level 3",
@@ -974,6 +976,7 @@
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Numero",
+    "number-attachments": "Nº de adjuntos",
     "number-length": "number-length",
     "number-recipients": "Nº perceptores",
     "number2": "il numero 2",
@@ -1121,6 +1124,7 @@
     "profile": "Perfil",
     "profit-and-loss": "Profit and Loss",
     "profit-and-loss-balance": "Profit and loss accounts",
+    "profits": "Beneficios",
     "project": "project",
     "projects": "projects",
     "provider-reference": "Riferimento del fornitore",
