--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -812,6 +812,8 @@
     "ledger": "Diário",
     "left": "Left",
     "level": "Level",
+    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-cost-sales": "Nivel para ver costes",
     "level1": "Level 1",
     "level2": "Level 2",
     "level3": "Level 3",
@@ -974,6 +976,7 @@
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Número",
+    "number-attachments": "Nº de adjuntos",
     "number-length": "number-length",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
@@ -1121,6 +1124,7 @@
     "profile": "Perfil",
     "profit-and-loss": "Profit and Loss",
     "profit-and-loss-balance": "Profit and loss accounts",
+    "profits": "Beneficios",
     "project": "Projeto",
     "projects": "Projetos",
     "provider-reference": "Referência do provedor",
