--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -812,6 +812,8 @@
     "ledger": "Ledger",
     "left": "Left",
     "level": "Level",
+    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-cost-sales": "Nivel para ver costes",
     "level1": "Level 1",
     "level2": "Level 2",
     "level3": "Level 3",
@@ -974,6 +976,7 @@
     "notifications": "Notifications",
     "november": "November",
     "number": "Number",
+    "number-attachments": "Nº de adjuntos",
     "number-length": "Number length",
     "number-recipients": "Recipients no.",
     "number2": "Number 2",
@@ -1121,6 +1124,7 @@
     "profile": "Profile",
     "profit-and-loss": "Profit and Loss",
     "profit-and-loss-balance": "Profit and loss accounts",
+    "profits": "Beneficios",
     "project": "Project",
     "projects": "Projects",
     "provider-reference": "Provider reference",
