--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -812,6 +812,8 @@
     "ledger": "Diario",
     "left": "Esquerda",
     "level": "Nivel",
+    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-cost-sales": "Nivel para ver costes",
     "level1": "Nivel 1",
     "level2": "Nivel 2",
     "level3": "Nivel 3",
@@ -974,6 +976,7 @@
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Número",
+    "number-attachments": "Nº de adjuntos",
     "number-length": "Lonxitude do número",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
@@ -1121,6 +1124,7 @@
     "profile": "Perfil",
     "profit-and-loss": "Perdas e ganacias",
     "profit-and-loss-balance": "Balance de Pérdidas e Ganancias",
+    "profits": "Beneficios",
     "project": "Proxecto",
     "projects": "Proxectos",
     "provider-reference": "Referencia do provedor",
