--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -812,6 +812,8 @@
     "ledger": "Diari",
     "left": "Esquerra",
     "level": "Nivell",
+    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-cost-sales": "Nivel para ver costes",
     "level1": "Nivell 1",
     "level2": "Nivell 2",
     "level3": "Nivell 3",
@@ -974,6 +976,7 @@
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Número",
+    "number-attachments": "Nº de adjuntos",
     "number-length": "Llongitut del número",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
@@ -1121,6 +1124,7 @@
     "profile": "Perfil",
     "profit-and-loss": "Pèrdues i  Guanys",
     "profit-and-loss-balance": "Balanç de Pèrdues i Guanys",
+    "profits": "Beneficios",
     "project": "Projecte",
     "projects": "projects",
     "provider-reference": "Referència del proveïdor",
